tests/references/ill-typed/unexpected-memory-address-3.stella
language core;

extend with #references;

fn main(x : Nat) -> Nat {
	return if <0xABCDEF> then succ(0) else 0
}
